--- a/src/Eternity/Response/Responder/smartpage_template/smartpage.twig
+++ b/src/Eternity/Response/Responder/smartpage_template/smartpage.twig
@@ -1,4 +1,4 @@
-{% spaceless %}
+{% filter spaceless %}
 <!doctype html>
 <html lang="{{ smartpage.language }}">
 <head>
@@ -39,4 +39,4 @@
 
 </body>
 </html>
-{% endspaceless %}
+{% endfilter %}
